# NEXUS

./: .env.example  .env.gpu.example  .env.local.example  .gitignore  .gitleaksignore  .pre-commit-config.yaml  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CLAUDE2.md  Caddyfile  Dockerfile  Makefile  Procfile.dev  README.md  ROADMAP-UPDATE-PROMPT.md  ROADMAP.md  TEST-REPORT-2026-03-20.md  alembic.ini  docker-compose.cloud.yml  docker-compose.gpu.yml  docker-compose.ingest.yml  docker-compose.local.yml  docker-compose.prod.yml  docker-compose.yml  plan.md  pyproject.toml
.claude/agents/: log-monitor.md
.claude/commands/: deploy-gcp.md  health-check.md  system-status.md
.github/workflows/: ci.yml  deploy.yml  evaluate.yml  helm-lint.yml  ingest-epstein.yml  load-test.yml  test-backend.yml  test-frontend.yml  vm-control.yml
NEXUS/: .gitignore  CLAUDE.md  Dockerfile  docker-compose.yml  pyproject.toml
NEXUS/app/: config.py  dependencies.py  main.py
NEXUS/app/common/: middleware.py  models.py  vector_store.py
NEXUS/app/documents/: router.py  schemas.py
NEXUS/app/entities/: graph_service.py  relationship_extractor.py  resolver.py  router.py  schemas.py
NEXUS/app/ingestion/: chunker.py  embedder.py  parser.py  router.py  schemas.py  tasks.py
NEXUS/app/query/: nodes.py  prompts.py  retriever.py  router.py
NEXUS/docs/research/: graphrag-feasibility-report.md
NEXUS/migrations/: env.py
NEXUS/tests/: conftest.py  test_health.py
NEXUS/tests/test_common/: test_rate_limit.py
NEXUS/tests/test_entities/: test_graph_service_m3.py  test_resolver.py
NEXUS/tests/test_ingestion/: test_embedder.py  test_parser.py  test_router.py
NEXUS/tests/test_query/: test_checkpointer.py  test_graph.py  test_nodes.py  test_router.py
NEXUS/workers/: celery_app.py
app/: config.py  dependencies.py  main.py
app/analysis/: anomaly.py  completeness.py  prompts.py  schemas.py  sentiment.py  tasks.py
app/analytics/: clustering.py  communities.py  community_prompts.py  community_schemas.py  router.py  schemas.py  service.py
app/annotations/: router.py  schemas.py  service.py
app/audit/: router.py  schemas.py  service.py
app/auth/: admin_router.py  middleware.py  oidc.py  oidc_router.py  oidc_schemas.py  router.py  saml.py  saml_router.py  saml_schemas.py  schemas.py  service.py
app/cases/: agent.py  context_resolver.py  prompts.py  router.py  schemas.py  service.py  tasks.py
app/common/: agent_logging.py  db_utils.py  embedder.py  exceptions.py  interfaces.py  llm.py  metrics.py  middleware.py  models.py  rate_limit.py  redaction_utils.py  storage.py  vector_store.py
app/datasets/: router.py  schemas.py  service.py
app/depositions/: prompts.py  router.py  schemas.py  service.py
app/documents/: comparison.py  privilege_export.py  router.py  schemas.py  service.py
app/edrm/: loadfile_parser.py  router.py  schemas.py  service.py
app/entities/: coreference.py  extractor.py  graph_service.py  prompts.py  relationship_extractor.py  resolution_agent.py  resolver.py  router.py  schema.py  schemas.py  tasks.py
app/evaluation/: __init__.py  router.py  schemas.py  service.py
app/exports/: generators.py  router.py  schemas.py  service.py  tasks.py
app/feature_flags/: __init__.py  registry.py  router.py  schemas.py  service.py
app/gdrive/: crypto.py  router.py  schemas.py  service.py  tasks.py
app/ingestion/: bulk_import.py  chunk_summarizer.py  chunker.py  contextualizer.py  dedup.py  embedder.py  events.py  ocr_corrector.py  parser.py  prompts.py  quality_scorer.py  router.py  schemas.py  service.py  sparse_embedder.py  splade_embedder.py  summarizer.py  tasks.py  threading.py  visual_embedder.py
app/llm_config/: pricing.py  (+5 more)
deploy/: nexus.service
docs/: CLOUD-DEPLOY.md  GAP-ANALYSIS.md  GCP-HOSTING-REVIEW.md  M13-FRONTEND-SPEC.md  M6-BULK-IMPORT.md  MATURITY-ADVANCEMENT-PLAN.md  NEXUS-Features-Overview.md  PLAN-E2E-KG.md  PLATFORM-MATURITY-AUDIT.md  QA-AUDIT-FINDINGS.md  RAG-MATURITY-AUDIT.md  RAG-RESEARCH-2026.md  agents.md  backend-codebase-audit.md  celery-scaling.md  cognee-graphrag-research.md  competitive-analysis-q2-2026.md  corpus-gap-analysis.md  database-schema.md  epstein-efta-ingestion-plan.md  epstein-files-plan.md  epstein-ingestion-gpu.md  epstein-ingestion-plan.md  epstein-ingestion.md  evaluation-guide.md  feature-flags.md  knowledge-graph-audit.md  local-llm-feasibility.md  modules.md  qa-evaluation-report.md  rag-architecture-audit.md  security-agentic-rag-audit.md  supplementary-corpus-plan.md  testing-guide.md
evaluation/: __init__.py  dataset.py  flag_sweep.py  judge.py  prompts.py  report.py  runner.py  schemas.py  synthetic.py  tuning.py
frontend/: .gitignore  app.py  eslint.config.js  index.html  orval.config.ts  package-lock.json  package.json  playwright.cloud.config.ts  playwright.config.ts  requirements.txt  tsconfig.app.json  tsconfig.tsbuildinfo  vercel.json  vite.config.ts
load_tests/: README.md  config.py  locustfile.py  sla.py
monitoring/: alert_rules.yml  docker-compose.monitoring.yml  prometheus.yml
reports/: qa-report.md
scripts/: autoscale_workers.sh  backfill_dataset_documents.py  backfill_document_dates.py  backfill_entity_chunks.py  backfill_minio_from_gcs.py  backfill_sparse_vectors.py  benchmark_local.py  build_efta_ground_truth.py  cleanup_entities.py  cleanup_garbage_entities.py  cloud-deploy.sh  cloud-teardown.sh  delete_noisy_entities.py  demo.sh  diagnose_query.py  dispatch_deferred_ner.py  dispatch_neo4j_gap_ner.py  download_courtlistener.py  download_epstein_dataset.py  download_fbi_vault.py  download_hf_dataset.py  evaluate.py  fix_admin_password.py  fix_page_counts.py  fix_qdrant_doc_ids.py  generate_test_pdf.py  import_dataset.py  import_epstein_fbi.py  import_epstein_hf.py  import_fbi_dataset.py  import_pdf_directory.py  ner_worker_startup.sh  reembed.py  repair_neo4j_matter_ids.py  run_ner_pass.py  sample_corpus.py  seed_admin.py  seed_demo.py  seed_epstein_matter.py  tune_rrf.py  (+1 more)
tests/: README.md  conftest.py  test_health.py
vault-ai-systems/: CLAUDE.md  ROADMAP.md
workers/: celery_app.py
(+729 files in other folders)
