[project]
name = "nexus"
version = "0.1.0"
description = "Multimodal RAG Investigation Platform for Legal Document Intelligence"
requires-python = ">=3.12"
dependencies = [
    # API
    "fastapi>=0.115",
    "uvicorn[standard]",
    "sse-starlette",
    "python-multipart",

    # LLM & AI
    "anthropic>=0.52",
    "openai>=1.60",
    "instructor>=1.14",
    "langchain-core>=0.3",
    "langgraph>=0.4",
    "langgraph-checkpoint-postgres>=2.0",

    # Document Processing
    "docling>=2.70",
    "extract-msg>=0.48",
    "striprtf>=0.0.26",

    # Retrieval
    "llama-index-core",
    "fastembed",

    # Vector DB & Graph
    "qdrant-client>=1.12",
    "neo4j>=5.25",
    "graphiti-core>=0.17",

    # NER & Coreference
    "gliner>=0.2.24",
    "spacy>=3.8",
    "coreferee>=1.4",

    # Reranker
    "sentence-transformers>=3.0",
    "bertopic>=0.16",

    # Infrastructure
    "celery[redis]>=5.5",
    "boto3",
    "sqlalchemy>=2.0",
    "alembic",
    "asyncpg",
    "psycopg2-binary",
    "redis>=5.0",
    "aiofiles",

    # PDF Redaction
    "pikepdf>=10.0",

    # Entity Resolution
    "rapidfuzz",

    # Near-Duplicate Detection
    "datasketch>=1.6",

    # Auth
    "PyJWT[cryptography]",
    "passlib[bcrypt]",
    "bcrypt<4.1",
    "email-validator",

    # Utilities
    "pydantic>=2.10",
    "pydantic-settings",
    "structlog",
    "tenacity",
    "tiktoken",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "httpx>=0.27",
    "ruff>=0.8",
    "mypy>=1.13",
    "ragas>=0.1.10",
    "datasets>=2.14",
    "langchain-anthropic>=0.3",
    "langchain-openai>=0.3",
]
visual = [
    "colpali-engine>=0.3.1",
    "transformers>=4.45.0",
    "torch>=2.1.0",
    "pdf2image>=1.17.0",
]
frontend = [
    "streamlit>=1.40",
    "requests",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app", "workers"]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["app", "workers"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
check_untyped_defs = false
disallow_untyped_defs = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--durations=10"
filterwarnings = [
    "ignore::DeprecationWarning",
]
